set(PARSER_FILES
${PROJECT_SOURCE_DIR}/revlanguage
${PROJECT_SOURCE_DIR}/revlanguage/datatypes
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/basic
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/basic/Complex.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/basic/Complex.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/basic/Integer.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/basic/Integer.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/basic/Natural.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/basic/Natural.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/basic/Probability.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/basic/Probability.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/basic/Real.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/basic/Real.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/basic/RealPos.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/basic/RealPos.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/basic/RlBoolean.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/basic/RlBoolean.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/basic/RlString.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/basic/RlString.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/container
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/container/Container.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/container/Container.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/container/Simplex.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/container/Simplex.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/container/TypedContainer.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/container/TypedControlVariableContainer.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/container/Vector.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/container/VectorAbstractElement.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/container/VectorRbPointer.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/container/VectorRlPointer.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/evolution
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/evolution/character
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/evolution/character/RlAbstractCharacterData.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/evolution/character/RlAbstractCharacterData.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/evolution/character/RlAbstractDiscreteCharacterData.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/evolution/character/RlAbstractDiscreteCharacterData.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/evolution/character/RlAminoAcidState.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/evolution/character/RlAminoAcidState.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/evolution/character/RlDiscreteCharacterData.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/evolution/character/RlDnaState.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/evolution/character/RlDnaState.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/evolution/character/RlRnaState.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/evolution/character/RlRnaState.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/evolution/character/RlStandardState.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/evolution/character/RlStandardState.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/evolution/character/RlTaxonData.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/evolution/trees
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/evolution/trees/RlBranchLengthTree.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/evolution/trees/RlBranchLengthTree.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/evolution/trees/RlClade.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/evolution/trees/RlClade.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/evolution/trees/RlTimeTree.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/evolution/trees/RlTimeTree.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/evolution/trees/RlTopology.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/evolution/trees/RlTopology.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/monitors
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/monitors/RlExtendedNewickFileMonitor.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/monitors/RlExtendedNewickFileMonitor.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/monitors/RlFileMonitor.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/monitors/RlFileMonitor.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/monitors/RlModelMonitor.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/monitors/RlModelMonitor.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/monitors/RlMonitor.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/monitors/RlMonitor.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/monitors/RlScreenMonitor.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/monitors/RlScreenMonitor.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/RlMove.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/RlMove.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/RlRandomGeometricWalkMove.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/RlRandomGeometricWalkMove.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/RlRandomIntegerWalkMove.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/RlRandomIntegerWalkMove.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/RlScaleMove.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/RlScaleMove.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/RlSimplexMove.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/RlSimplexMove.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/RlSimplexSingleElementScale.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/RlSimplexSingleElementScale.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/RlSingleElementScale.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/RlSingleElementScale.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/RlSlidingMove.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/RlSlidingMove.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/RlVectorScale.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/RlVectorScale.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/tree
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/tree/RlFixedNodeheightPruneRegraft.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/tree/RlFixedNodeheightPruneRegraft.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/tree/RlNarrowExchange.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/tree/RlNarrowExchange.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/tree/RlNearestNeighborInterchange.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/tree/RlNearestNeighborInterchange.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/tree/RlNearestNeighborInterchange_nonClock.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/tree/RlNearestNeighborInterchange_nonClock.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/tree/RlNodeTimeSlideUniform.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/tree/RlNodeTimeSlideUniform.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/tree/RlRateAgeBetaShift.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/tree/RlRateAgeBetaShift.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/tree/RlRootTimeSlide.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/tree/RlRootTimeSlide.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/tree/RlSubtreeScale.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/tree/RlSubtreeScale.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/tree/RlTreeScale.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/tree/RlTreeScale.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/tree/RlWeightedNodeTimeSlide.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/moves/tree/RlWeightedNodeTimeSlide.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/RlMcmc.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/RlMcmc.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/RlModel.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/RlModel.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/RlPowerPosterior.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/RlPowerPosterior.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/RlTrace.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/RlTrace.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/inference/RlTreeTrace.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/math
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/math/RlRateMatrix.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/math/RlRateMatrix.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/math/RlRateMatrix_GTR.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/math/RlRateMatrix_GTR.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/math/RlRateMatrix_JC.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/math/RlRateMatrix_JC.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/RbLanguageObject.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/RbLanguageObject.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/RbNullObject.cpp
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/RbNullObject.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/RbPtr.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/RlControlVariableWrapper.h
${PROJECT_SOURCE_DIR}/revlanguage/datatypes/RlModelVariableWrapper.h
${PROJECT_SOURCE_DIR}/revlanguage/distributions
${PROJECT_SOURCE_DIR}/revlanguage/distributions/evolution
${PROJECT_SOURCE_DIR}/revlanguage/distributions/evolution/character
${PROJECT_SOURCE_DIR}/revlanguage/distributions/evolution/character/RlCharacterStateEvolutionAlongTree.h
${PROJECT_SOURCE_DIR}/revlanguage/distributions/evolution/tree
${PROJECT_SOURCE_DIR}/revlanguage/distributions/evolution/tree/RlBirthDeathProcess.cpp
${PROJECT_SOURCE_DIR}/revlanguage/distributions/evolution/tree/RlBirthDeathProcess.h
${PROJECT_SOURCE_DIR}/revlanguage/distributions/evolution/tree/RlConstantRateBirthDeathProcess.cpp
${PROJECT_SOURCE_DIR}/revlanguage/distributions/evolution/tree/RlConstantRateBirthDeathProcess.h
${PROJECT_SOURCE_DIR}/revlanguage/distributions/evolution/tree/RlDiversityDependentPureBirthProcess.cpp
${PROJECT_SOURCE_DIR}/revlanguage/distributions/evolution/tree/RlDiversityDependentPureBirthProcess.h
${PROJECT_SOURCE_DIR}/revlanguage/distributions/evolution/tree/RlUniformTimeTreeDistribution.cpp
${PROJECT_SOURCE_DIR}/revlanguage/distributions/evolution/tree/RlUniformTimeTreeDistribution.h
${PROJECT_SOURCE_DIR}/revlanguage/distributions/evolution/tree/RlUniformTopologyDistribution.cpp
${PROJECT_SOURCE_DIR}/revlanguage/distributions/evolution/tree/RlUniformTopologyDistribution.h
${PROJECT_SOURCE_DIR}/revlanguage/distributions/math
${PROJECT_SOURCE_DIR}/revlanguage/distributions/math/RlBernoulliDistribution.cpp
${PROJECT_SOURCE_DIR}/revlanguage/distributions/math/RlBernoulliDistribution.h
${PROJECT_SOURCE_DIR}/revlanguage/distributions/math/RlBetaDistribution.cpp
${PROJECT_SOURCE_DIR}/revlanguage/distributions/math/RlBetaDistribution.h
${PROJECT_SOURCE_DIR}/revlanguage/distributions/math/RlDirichletDistribution.cpp
${PROJECT_SOURCE_DIR}/revlanguage/distributions/math/RlDirichletDistribution.h
${PROJECT_SOURCE_DIR}/revlanguage/distributions/math/RlExponentialDistribution.cpp
${PROJECT_SOURCE_DIR}/revlanguage/distributions/math/RlExponentialDistribution.h
${PROJECT_SOURCE_DIR}/revlanguage/distributions/math/RlGammaDistribution.cpp
${PROJECT_SOURCE_DIR}/revlanguage/distributions/math/RlGammaDistribution.h
${PROJECT_SOURCE_DIR}/revlanguage/distributions/math/RlGeometricBrownianMotion.cpp
${PROJECT_SOURCE_DIR}/revlanguage/distributions/math/RlGeometricBrownianMotion.h
${PROJECT_SOURCE_DIR}/revlanguage/distributions/math/RlGeometricDistribution.cpp
${PROJECT_SOURCE_DIR}/revlanguage/distributions/math/RlGeometricDistribution.h
${PROJECT_SOURCE_DIR}/revlanguage/distributions/math/RlLognormalDistribution.cpp
${PROJECT_SOURCE_DIR}/revlanguage/distributions/math/RlLognormalDistribution.h
${PROJECT_SOURCE_DIR}/revlanguage/distributions/math/RlNormalDistribution.cpp
${PROJECT_SOURCE_DIR}/revlanguage/distributions/math/RlNormalDistribution.h
${PROJECT_SOURCE_DIR}/revlanguage/distributions/math/RlOffsetExponentialDistribution.cpp
${PROJECT_SOURCE_DIR}/revlanguage/distributions/math/RlOffsetExponentialDistribution.h
${PROJECT_SOURCE_DIR}/revlanguage/distributions/math/RlOffsetLognormalDistribution.cpp
${PROJECT_SOURCE_DIR}/revlanguage/distributions/math/RlOffsetLognormalDistribution.h
${PROJECT_SOURCE_DIR}/revlanguage/distributions/math/RlOneOverXDistribution.cpp
${PROJECT_SOURCE_DIR}/revlanguage/distributions/math/RlOneOverXDistribution.h
${PROJECT_SOURCE_DIR}/revlanguage/distributions/math/RlPositiveUniformDistribution.cpp
${PROJECT_SOURCE_DIR}/revlanguage/distributions/math/RlPositiveUniformDistribution.h
${PROJECT_SOURCE_DIR}/revlanguage/distributions/math/RlUniformDistribution.cpp
${PROJECT_SOURCE_DIR}/revlanguage/distributions/math/RlUniformDistribution.h
${PROJECT_SOURCE_DIR}/revlanguage/distributions/RlContinuousDistribution.cpp
${PROJECT_SOURCE_DIR}/revlanguage/distributions/RlContinuousDistribution.h
${PROJECT_SOURCE_DIR}/revlanguage/distributions/RlDistribution.cpp
${PROJECT_SOURCE_DIR}/revlanguage/distributions/RlDistribution.h
${PROJECT_SOURCE_DIR}/revlanguage/distributions/RlPositiveContinuousDistribution.cpp
${PROJECT_SOURCE_DIR}/revlanguage/distributions/RlPositiveContinuousDistribution.h
${PROJECT_SOURCE_DIR}/revlanguage/distributions/RlTypedDistribution.h
${PROJECT_SOURCE_DIR}/revlanguage/functions
${PROJECT_SOURCE_DIR}/revlanguage/functions/argument
${PROJECT_SOURCE_DIR}/revlanguage/functions/argument/Argument.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/argument/Argument.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/argumentrules
${PROJECT_SOURCE_DIR}/revlanguage/functions/argumentrules/ArgumentRule.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/argumentrules/ArgumentRule.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/argumentrules/ArgumentRules.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/argumentrules/ArgumentRules.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/argumentrules/Ellipsis.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/argumentrules/Ellipsis.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/argumentrules/OptionRule.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/argumentrules/OptionRule.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/argumentrules/RangeRule.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/basic
${PROJECT_SOURCE_DIR}/revlanguage/functions/basic/Func_clear.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/basic/Func_clear.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/basic/Func_ls.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/basic/Func_ls.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/basic/Func_normalizeVector.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/basic/Func_normalizeVector.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/basic/Func_quit.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/basic/Func_quit.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/basic/Func_rbVector.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/basic/Func_rlvector.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/basic/Func_seed.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/basic/Func_seed.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/basic/Func_simplex.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/basic/Func_simplex.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/basic/Func_Source.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/basic/Func_Source.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/basic/Func_structure.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/basic/Func_structure.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/basic/Func_type.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/basic/Func_type.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/basic/Func_vector.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/builtin
${PROJECT_SOURCE_DIR}/revlanguage/functions/builtin/Func__and.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/builtin/Func__and.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/builtin/Func__eq.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/builtin/Func__ge.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/builtin/Func__gt.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/builtin/Func__le.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/builtin/Func__lt.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/builtin/Func__ne.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/builtin/Func__or.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/builtin/Func__or.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/builtin/Func__unot.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/builtin/Func__unot.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/builtin/Func_range.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/builtin/Func_range.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/constructor
${PROJECT_SOURCE_DIR}/revlanguage/functions/constructor/ConstructorClade.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/constructor/ConstructorClade.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/constructor/ConstructorCtmcModel.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/constructor/ConstructorCtmcModel.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/constructor/ConstructorFunction.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/constructor/ConstructorFunction.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/DistributionFunctionCdf.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/DistributionFunctionCdf.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/DistributionFunctionPdf.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/DistributionFunctionQuantile.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/DistributionFunctionQuantile.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/DistributionFunctionRv.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/Func_gtr.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/Func_gtr.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/RlBlosum62RateMatrixFunction.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/RlBlosum62RateMatrixFunction.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/RlCpRevRateMatrixFunction.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/RlCpRevRateMatrixFunction.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/RlDayhoffRateMatrixFunction.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/RlDayhoffRateMatrixFunction.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/RlF81RateMatrixFunction.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/RlF81RateMatrixFunction.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/RlHkyRateMatrixFunction.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/RlHkyRateMatrixFunction.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/RlJcRateMatrixFunction.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/RlJcRateMatrixFunction.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/RlJonesRateMatrixFunction.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/RlJonesRateMatrixFunction.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/RlMtMamRateMatrixFunction.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/RlMtMamRateMatrixFunction.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/RlMtRevRateMatrixFunction.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/RlMtRevRateMatrixFunction.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/RlRtRevRateMatrixFunction.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/RlRtRevRateMatrixFunction.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/RlTmrcaStatistic.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/RlTmrcaStatistic.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/RlTreeAssemblyFunction.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/RlTreeAssemblyFunction.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/RlTreeHeightStatistic.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/RlTreeHeightStatistic.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/RlVtRateMatrixFunction.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/RlVtRateMatrixFunction.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/RlWagRateMatrixFunction.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/evolution/RlWagRateMatrixFunction.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/GeneralUniveriateUserFunction.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/GeneralUniveriateUserFunction.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/inference
${PROJECT_SOURCE_DIR}/revlanguage/functions/inference/convergence
${PROJECT_SOURCE_DIR}/revlanguage/functions/inference/convergence/BurninEstimationConvergenceAssessmentFunction.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/inference/convergence/BurninEstimationConvergenceAssessmentFunction.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/inference/convergence/OptimalBurninFunction.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/inference/convergence/OptimalBurninFunction.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/io
${PROJECT_SOURCE_DIR}/revlanguage/functions/io/Func_mapTree.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/io/Func_readCharacterData.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/io/Func_readCharacterData.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/io/Func_readTrace.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/io/Func_readTrace.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/io/Func_readTrees.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/io/Func_readTrees.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/io/Func_readTreeTrace.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/io/Func_readTreeTrace.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/io/Func_write.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/io/Func_write.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/io/Func_writeFasta.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/io/Func_writeFasta.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/io/Func_writeNexus.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/io/Func_writeNexus.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/math
${PROJECT_SOURCE_DIR}/revlanguage/functions/math/Func_abs.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/math/Func_abs.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/math/Func_add.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/math/Func_ceil.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/math/Func_ceil.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/math/Func_div.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/math/Func_exp.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/math/Func_exp.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/math/Func_floor.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/math/Func_floor.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/math/Func_ln.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/math/Func_ln.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/math/Func_log.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/math/Func_log.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/math/Func_mean.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/math/Func_mean.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/math/Func_mult.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/math/Func_power.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/math/Func_power.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/math/Func_powermix.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/math/Func_powermix.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/math/Func_round.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/math/Func_round.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/math/Func_sqrt.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/math/Func_sqrt.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/math/Func_sub.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/math/Func_trunc.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/math/Func_trunc.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/math/Func_uminus.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/MemberFunction.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/MemberFunction.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/RlFunction.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/RlFunction.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/RlTypedFunction.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/RlUnivariateFunction.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/RlUnivariateFunction.h
${PROJECT_SOURCE_DIR}/revlanguage/functions/UserFunction.cpp
${PROJECT_SOURCE_DIR}/revlanguage/functions/UserFunction.h
${PROJECT_SOURCE_DIR}/revlanguage/help
${PROJECT_SOURCE_DIR}/revlanguage/help/Help.cpp
${PROJECT_SOURCE_DIR}/revlanguage/help/Help.h
${PROJECT_SOURCE_DIR}/revlanguage/main.cpp
${PROJECT_SOURCE_DIR}/revlanguage/parser
${PROJECT_SOURCE_DIR}/revlanguage/parser/grammar.tab.cpp
${PROJECT_SOURCE_DIR}/revlanguage/parser/grammar.tab.h
${PROJECT_SOURCE_DIR}/revlanguage/parser/lex.yy.cpp
${PROJECT_SOURCE_DIR}/revlanguage/parser/Parser.cpp
${PROJECT_SOURCE_DIR}/revlanguage/parser/Parser.h
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxAdditionAssignment.cpp
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxAdditionAssignment.h
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxBinaryExpr.cpp
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxBinaryExpr.h
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxClassDef.cpp
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxClassDef.h
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxConstant.cpp
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxConstant.h
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxConstantAssignment.cpp
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxConstantAssignment.h
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxDecrement.cpp
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxDecrement.h
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxDeterministicAssignment.cpp
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxDeterministicAssignment.h
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxDivisionAssignment.cpp
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxDivisionAssignment.h
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxElement.cpp
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxElement.h
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxForLoop.cpp
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxForLoop.h
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxFormal.cpp
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxFormal.h
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxFunctionCall.cpp
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxFunctionCall.h
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxFunctionDef.cpp
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxFunctionDef.h
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxIncrement.cpp
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxIncrement.h
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxLabeledExpr.cpp
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxLabeledExpr.h
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxMultiplicationAssignment.cpp
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxMultiplicationAssignment.h
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxStatement.cpp
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxStatement.h
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxStochasticAssignment.cpp
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxStochasticAssignment.h
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxSubtractionAssignment.cpp
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxSubtractionAssignment.h
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxUnaryExpr.cpp
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxUnaryExpr.h
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxVariable.cpp
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxVariable.h
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxVariableDecl.cpp
${PROJECT_SOURCE_DIR}/revlanguage/parser/SyntaxVariableDecl.h
${PROJECT_SOURCE_DIR}/revlanguage/RevLanguageMain.cpp
${PROJECT_SOURCE_DIR}/revlanguage/RevLanguageMain.h
${PROJECT_SOURCE_DIR}/revlanguage/ui
${PROJECT_SOURCE_DIR}/revlanguage/ui/RlUserInterface.cpp
${PROJECT_SOURCE_DIR}/revlanguage/ui/RlUserInterface.h
${PROJECT_SOURCE_DIR}/revlanguage/utils
${PROJECT_SOURCE_DIR}/revlanguage/utils/RbVersion.cpp
${PROJECT_SOURCE_DIR}/revlanguage/utils/RbVersion.h
${PROJECT_SOURCE_DIR}/revlanguage/utils/RlUtils.cpp
${PROJECT_SOURCE_DIR}/revlanguage/utils/RlUtils.h
${PROJECT_SOURCE_DIR}/revlanguage/workspace
${PROJECT_SOURCE_DIR}/revlanguage/workspace/Environment.cpp
${PROJECT_SOURCE_DIR}/revlanguage/workspace/Environment.h
${PROJECT_SOURCE_DIR}/revlanguage/workspace/FunctionTable.cpp
${PROJECT_SOURCE_DIR}/revlanguage/workspace/FunctionTable.h
${PROJECT_SOURCE_DIR}/revlanguage/workspace/MethodTable.cpp
${PROJECT_SOURCE_DIR}/revlanguage/workspace/MethodTable.h
${PROJECT_SOURCE_DIR}/revlanguage/workspace/RbRegister.cpp
${PROJECT_SOURCE_DIR}/revlanguage/workspace/Signals.cpp
${PROJECT_SOURCE_DIR}/revlanguage/workspace/Signals.h
${PROJECT_SOURCE_DIR}/revlanguage/workspace/TypeSpec.cpp
${PROJECT_SOURCE_DIR}/revlanguage/workspace/TypeSpec.h
${PROJECT_SOURCE_DIR}/revlanguage/workspace/Variable.cpp
${PROJECT_SOURCE_DIR}/revlanguage/workspace/Variable.h
${PROJECT_SOURCE_DIR}/revlanguage/workspace/VariableSlot.cpp
${PROJECT_SOURCE_DIR}/revlanguage/workspace/VariableSlot.h
${PROJECT_SOURCE_DIR}/revlanguage/workspace/Workspace.cpp
${PROJECT_SOURCE_DIR}/revlanguage/workspace/Workspace.h
)
add_library(rb-parser ${PARSER_FILES})
