### add test for functions

### sqrt
#add_executable(testSqrt ../../main/RbObject.cpp ../../utils/RbException.cpp ../../datatypes/RbAbstractDataType.cpp ../../datatypes/primitive/RbDouble.cpp ../../datatypes/RbTypeInfo.cpp ../../functions/Argument.cpp ../../functions/ArgumentRule.cpp ../../functions/RbAbstractFunction.cpp ../../functions/math/RbFunction_sqrt.cpp testSqrt.cpp)

